# Legacy-GameEngine

./: .gitmodules  CMakeLists.txt  GameEngine Architecture.odg  Readme.md  imgui.ini
Sandbox/: CMakeLists.txt  Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp
Sandbox/assets/shaders/: RectColor.glsl  Texture.glsl
include/Hazel/: hazel.h
include/Legacy/: legacy.h
src/: Application.cpp  Application.h  CMakeLists.txt  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Test.cpp  Test.h  Window.h  hz_pch.h  lg_pch.h  log.cpp  log.h
src/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  Layer.h  LayerStack.cpp  LayerStack.h  MouseButtonCodes.h  Timestep.h  Window.h
src/Debug/: Instrumentor.h
src/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
src/Imgui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  imgui_opengl_renderer.cpp  imgui_opengl_renderer.h
src/Platform/Unix/: UnixInput.cpp  UnixInput.h  UnixWindow.cpp  UnixWindow.h
src/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
